@@ -1,6 +1,7 @@
 2013-02-21  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #10037: Connect static_territories with static_countries
+	* Resolves #45733: Move icons to Resources directory
 
 2013-02-20  Stanislas Rolland  <typo3@sjbr.ca>
 
